[aliases]
test=pytest

[tool:pytest]
addopts = --nbval --current-env
testpaths = onnx/test onnx/examples

[metadata]
license-file = LICENSE

[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 80
### DEFAULT IGNORES FOR 4-space INDENTED PROJECTS ###
# E127, E128 are hard to silence in certain nested formatting situations.
# E265, E266 talk about comment formatting which is too opinionated.
# E402 warns on imports coming after statements. There are important use cases
# like demandimport (https://fburl.com/demandimport) that require statements
# before imports.
# E501 is not flexible enough, we're using B950 instead.
# E722 is a duplicate of B001.
# F405 is hard to silence since we indeed do star import
# P207 is a duplicate of B003.
# P208 is a duplicate of C403.
# W503 talks about operator formatting which is too opinionated.
# F401 clashes with PEP484 requiring us to import types that are only used in
# type comments.
ignore = E127, E128, E265, E266, E402, E501, E722, F405, P207, P208, W503, F401
exclude =
  .git,
  __pycache__,
  build/*,
  third_party/*
  *_pb2.py,
  .cache/*
  .eggs
  .setuptools-cmake-build/*

[mypy]
# follow-imports = silent  # TODO remove this
mypy_path = stubs:third_party/pybind11
strict_optional = True
warn_return_any = True
warn_no_return = True
# TODO warn_unused_ignores = True
warn_redundant_casts = True
warn_incomplete_stub = True
# TODO disallow_untyped_calls = True
check_untyped_defs = True
disallow_any_generics = True
no_implicit_optional = True
# TODO disallow_incomplete_defs = True
# TODO disallow_subclassing_any = True
disallow_untyped_decorators = True
warn_unused_configs = True

[mypy-onnx.*]
disallow_untyped_defs = True

[mypy-tools.*]
disallow_untyped_defs = True

# Ignore errors in setup.py
[mypy-setup]
ignore_errors = True
