# SPDX-License-Identifier: Apache-2.0

[aliases]
test=pytest

[tool:pytest]
addopts = --nbval --current-env
testpaths = onnx/test onnx/examples

[metadata]
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3

[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 88
### DEFAULT IGNORES FOR 4-space INDENTED PROJECTS ###
# E127, E128 are hard to silence in certain nested formatting situations.
# E265, E266 talk about comment formatting which is too opinionated.
# E402 warns on imports coming after statements. There are important use cases
# like demandimport (https://fburl.com/demandimport) that require statements
# before imports.
# E501 is not flexible enough, we're using B950 instead.
# E722 is a duplicate of B001.
# F405 is hard to silence since we indeed do star import
# P207 is a duplicate of B003.
# P208 is a duplicate of C403.
# W503 talks about operator formatting which is too opinionated.
# F401 clashes with PEP484 requiring us to import types that are only used in
# type comments.
# E203 is need to support black formatting.
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
# B905 `zip()` without an explicit `strict=` parameter.
# B950 as we have too many lines too long. This is ok because black handles most cases.
ignore = E127, E128, E265, E266, E402, E501, E722, F405, P207, P208, W503, F401, E203, B905, B950
exclude =
  .git,
  __pycache__,
  build/*,
  docs/docsgen/source/_static/*,
  third_party/*,
  *_pb2.py,
  .cache/*,
  .eggs,
  .setuptools-cmake-build/*,
